# trireme

./: .editorconfig  .gitignore  .gitmodules  0001-mlir-sparse-Add-a-small-proto-that-does-pref-for-SpM.patch  README.org  advisor-config.json  advisor.py  argument_parsers.py  benchmark.py  common.py  compute_structure_score.py  convert_ss_to_csr.py  convert_ss_to_csr.sh  create_sparse_mats.py  decorators.py  experiment.sh  generate-kernels.py  generate-spmv.py  generate_all_data.sh  generate_kernel.py  generate_kernels.py  hugetlbfs.py  hwpref_controller.py  input_manager.py  kernel_on_suitesparse.py  kernels.py  log_plot.py  logging_and_graphing.py  matrix_storage_manager.py  microbenchs.py  mlir.sparse.prefetching.patch  mlir_exec_engine.py  np_to_memref.py  parse_vtune_csv.py  perf-config.json  perf-events.json  plot-config.json  plot.py  prof.py  profile.py  (+40 more)
ainsworth/: README.org  component-wise-mult-crs-coo.ainsworth.ll  component-wise-mult-crs-coo.c  component-wise-mult-crs-coo.ll  component-wise-mult-crs-coo.mem2reg.ll  sddmm.ainsworth.ll  sddmm.c  sddmm.ll  sddmm.mem2reg.ll  simple-indirection.ainsworth.ll  simple-indirection.c  simple-indirection.ll  simple-indirection.mem2reg.ll  spmm-csr-coo.O2.ll  spmm-csr-coo.c  spmm-csr-coo.ll  spmm-csr-coo.mem2reg.ll  spmm-csr-dense.ainsworth.ll  spmm-csr-dense.c  spmm-csr-dense.ll  spmm-csr-dense.mem2reg.ll  spmv-coo-dense.ainsworth.ll  spmv-coo-dense.c  spmv-coo-dense.ll  spmv-coo-dense.mem2reg.ll  spmv-csr-dense.ainsworth.ll  spmv-csr-dense.c  spmv-csr-dense.ll  spmv-csr-dense.mem2reg.ll
baselines/: main.mlir.jinja2  spmv.ainsworth.mlir.jinja2  spmv.mlir.jinja2  spmv.spe.mlir.jinja2  spmv.trireme.mlir.jinja2
hwpref_ctrl/: CMakeLists.txt  compile_commands.json  hw_pref_control.c  hw_pref_control_dummy.c  hwpref_ctrl.c  hwpref_ctrl.h  hwpref_ctrl_dummy.c
llvm-patches/: 0001-mlir-memref-Add-transformation-for-chaning-loc-hint-.patch  0001-mlir-sparse-Add-prefetching-for-irregular-accesses.patch  0002-mlir-sparse-Add-prefetching-for-irregular-accesses.patch  0002-mlir-sparse-Add-restrict-for-when-to_tensor-for-outp.patch  0003-mlir-memref-Add-transformation-for-chaning-loc-hint-.patch  0003-mlir-sparse-Add-restrict-for-when-to_tensor-for-outp.patch  0004-mlir-openmp-Add-index-bitwidth-option-for-llvm-conve.patch  0005-mlir-vector-Add-index-bitwidth-option-for-llvm-conve.patch
microbenchs/: CMakeLists.txt  hw_prefs.c  one_page_many_streams.c  one_page_per_stream.c  perf.c
mlir-playground/: arith_expand.mlir  arm-neon-2.mlir  arm-neon-3.mlir  arm-neon-4.mlir  arm-neon-llvm-ir.ll  arm-neon.mlir  dense-diag.mlir  gemm.mlir  indirection.affine.mlir  indirection.inner-only-affine.mlir  mat_add.comp.mlir  mat_add.incomp.mlir  mat_add.incomp.opt.mlir  mat_add.mlir  matmul.mlir  mlir-opt.help-hidden.txt  omp.mlir  sparse-diag.mlir  sparse_select.mlir  spmv-csc-omp.mlir  spmv-symmetric-sparsified.mlir  spmv-symmetric.mlir  spmv_binary.mlir  spmv_csr_ains.mlir  spmv_pref_coo.mlir  spmv_sparse_vec.mlir  spmv_symmetric.c  spmv_symmetric_sparsified.mlir  sum-reduce.affine.mlir  temp.mlir  transform_add_prefetch_on_loaded.mlir  tutorial.mlir  tutorial_bindings.py
multistage/: CMakeLists.txt  compile_commands.json  hw_pref_control.c  hw_pref_control.h  hw_pref_control_dummy.c  main.c  spmv.h  spmv.multistage.c  spmv.multistage.mlir.jinja2
results/: add_mat_metadata.py  add_prof_results.py  bandwidth.json  cdf-spmm-speedups.py  cdf-spmv-speedups.py  cdf-vector-sizes.py  compute-speedups.py  compute_bandwidth.py  compute_mpki.py  compute_speedups.py  compute_structure_score.py  compute_tma_metrics.py  compute_vector_sizes.py  compute_work_metric.py  field_copy.py  field_remove.py  filter.py  find_groups_with_speedup.py  find_incomplete_experiments.py  from_list_of_dicts_to_dict_of_dicts.py  incomplete.json  plot_bargraph.py  plot_bargraph_on_res.py  plot_mpki_histogram.py  plot_speedup_vs_mpki.py  plot_speedups.py  replace_exec_times.py  sort_by.py  spy.py  structure-scores.json
results/Delor64K/: Delor64K-csr-pd.json  make_3d_plot.ipynb  notes.org  pd-dd-ovr-sweep.json
results/GAP-web/: GAP-web-all-enabled-dd-ovr.json  GAP-web-l1-ipp-mlc-streamer-dd-ovr.json  GAP-web-l1-ipp-mlc-streamer-llc-streamer-dd-ovr.json  GAP-web-mlc-streamer-dd-ovr.json  notes.org
results/agatha-2015/: agatha-l1-ipp-off.json  agatha-l2-stream-off.json  agatha-llc-off.json  notes.org
results/deprecated-ss-on-csr/: notes.org  process_perf_reports.py  profile-ss-csr-no-opt.json  profile-ss-csr-no-opt.json.processed.json  second-run-profile-ss-csr-no-opt.json  ss-csr-no-opt-llc-misses.json  ss-csr-no-opt.json  ss-csr-pref-mlir-45-llc-misses.json
results/kmer_U1a/: kmer_U1a-all-enabled-192.json  kmer_U1a-all-enabled-dd-ovr.json  kmer_U1a-all-enabled.json  kmer_U1a-l1-ipp-mlc-streamer-192.json  kmer_U1a-l1-ipp-mlc-streamer-dd-ovr.json  kmer_U1a-l1-ipp-mlc-streamer-llc-streamer-192.json  kmer_U1a-l1-ipp-mlc-streamer-llc-streamer-dd-ovr.json  kmer_U1a-mlc-streamer-192.json  kmer_U1a-mlc-streamer-dd-ovr.json  notes.org  results.json
results/nlpkkt240/: nlpkkt240-all-enabled.json  notes.org  (+2 more)
runahead-with-omp/: CMakeLists.txt  compile_commands.json  spmv-runahead-omp-tasks-2.c  spmv-runahead-omp-tasks-3.c  spmv-runahead-omp-tasks-4.c  spmv-runahead-omp-tasks-5-dummy.c  spmv-runahead-omp-tasks-5.c  spmv-runahead-omp-tasks-dummy.c  spmv-runahead-omp-tasks.c  spmv.h  test.c
runahead-with-omp-tasks/: CMakeLists.txt  compile_commands.json  main.c  spmv-runahead-with-omp-tasks.c  spmv.h
templates/: CMakeLists.txt  spmm.mlir.jinja2  spmm_csr_csr.main.mlir.jinja2  spmm_csx.main.c  spmv.main.mlir.jinja2  spmv.mlir.jinja2  spmv_coo.ains.mlir.jinja2  spmv_coo.main.c  spmv_coo.main.mlir.jinja2  spmv_coo.simple.mlir.jinja2  spmv_csc.ains.mlir.jinja2  spmv_csr.ains.mlir.jinja2  spmv_csr.ains.omp.mlir.jinja2  spmv_csr.main.c  spmv_csr.main.mlir.jinja2  spmv_csr.simple.mlir.jinja2  spmv_csr.spe.mlir.jinja2  spmv_csr.split.mlir.jinja2  spmv_csx.main.c  spmv_mult_semiring.mlir.jinja2  utils.c  utils.h
tests/: lit.cfg.py  lit.site.cfg.py.in  spmv_coo.mlir  spmv_csr.mlir
(+127 files in other folders)
